# danavi

./: Cargo.toml  README.md
src/: audio.rs  client.rs  config.rs  main.rs  mpris.rs  tui.rs  types.rs
