[package]
name = "danavi"
version = "0.0.1"
edition = "2026"
description = "A terminal-based music client for Navidrome/Subsonic servers using Subsonic APIe"
license = "MIT"

[dependencies]
# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# TUI
ratatui = "0.26"
crossterm = "0.28"

# Audio playback
rodio = "0.17"
symphonia = { version = "0.5", features = ["all"] }
symphonia-bundle-mp3 = "0.5"

# Utilities
md5 = "0.7"
dirs = "5.0"
rand = "0.8"
url = "2.5"
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
