[package]
name = "danavi"
version = "0.0.2"
edition = "2024"
description = "A terminal-based music client for Navidrome/Subsonic servers using Subsonic APIe"
license = "MIT"

[dependencies]
# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# TUI
ratatui = "0.26"
crossterm = "0.28"

# Audio playback
rodio = "0.17"
symphonia = { version = "0.5", features = ["all"] }
symphonia-bundle-mp3 = "0.5"

# D-Bus / MPRIS
zbus = { version = "4.4", default-features = false, features = ["tokio"] }
zvariant = "4.2"

# Utilities
md5 = "0.7"
dirs = "5.0"
rand = "0.8"
url = "2.5"
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
